# mcp-bsl-platform-help-context

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.gpu  LICENSE  README.md  config.example.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
mcp_bsl_context/: __init__.py  __main__.py  config.py  server.py
mcp_bsl_context/docinfo/: guideline.md  strict-types.md
mcp_bsl_context/domain/: docs_service.py  entities.py  enums.py  exceptions.py  services.py  value_objects.py
mcp_bsl_context/infrastructure/embeddings/: __init__.py  document_builder.py  provider.py  reranker.py
mcp_bsl_context/infrastructure/hbk/: container_reader.py  content_reader.py  context_reader.py  models.py  pages_visitor.py
mcp_bsl_context/infrastructure/hbk/parsers/: base.py  constructor_parser.py  enum_parser.py  enum_value_parser.py  html_handler.py  method_parser.py  object_parser.py  pages_parser.py  property_parser.py
mcp_bsl_context/infrastructure/hbk/toc/: toc.py  toc_parser.py  tokenizer.py
mcp_bsl_context/infrastructure/json_loader/: json_context_loader.py
mcp_bsl_context/infrastructure/search/: engine.py  hybrid_engine.py  indexes.py  semantic_engine.py  strategies.py
mcp_bsl_context/infrastructure/storage/: loader.py  mapper.py  repository.py  storage.py  version_discovery.py
mcp_bsl_context/presentation/: formatter.py
tests/: conftest.py  test_config.py  test_context_search_service.py  test_docs_service.py  test_document_builder.py  test_domain_entities.py  test_embedding_provider.py  test_formatter.py  test_hybrid_engine.py  test_indexes.py  test_json_loader.py  test_platform_version.py  test_reranker.py  test_search_engine.py  test_semantic_engine.py  test_tokenizer.py  test_version_discovery.py
